Fixed - right border not showing up on task previews

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ ul{
 .taskPreview{
     border: solid grey;
     height: 280px;
+    width: 277px;
 }
 
 #table{
